Reduce meaningless copying.