@@ -10,6 +10,7 @@ import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HexFormat;
 import java.util.List;
@@ -119,7 +120,7 @@ public record CellTerminalContentSnapshot(List<GenericStack> entries, String con
                 }
             }
         }
-        return List.copyOf(uniqueStacks);
+        return Collections.unmodifiableList(uniqueStacks);
     }
 
     /**
